k8s/tools/nexterm/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexterm
  namespace: default
  labels:
    app: nexterm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nexterm
  template:
    metadata:
      labels:
        app: nexterm
    spec:
      containers:
        - name: nexterm
          image: germannewsmaker/nexterm:latest
          ports:
            - name: http
              containerPort: 6989
              protocol: TCP
          volumeMounts:
            - name: nexterm-data
              mountPath: /app/data
      volumes:
        - name: nexterm-data
          persistentVolumeClaim:
            claimName: nexterm-data
