k8s/tools/nexterm/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nexterm-service
  namespace: default
  labels:
    app: nexterm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: nexterm
